Manage secrets via `a8c-secrets` instead of `configure` (#23356)
Co-authored-by: Claude Opus 5 <noreply@anthropic.com>
Co-authored-by: Gio Lodi <giovanni.lodi42@gmail.com>
Co-authored-by: Adalberto Plaza <adalpari@gmail.com>